--- a/src/app/password-group/password-group.component.html
+++ b/src/app/password-group/password-group.component.html
@@ -3,5 +3,5 @@
     <button mat-raised-button color='primary'> Search inside group</button>
     <button mat-raised-button color='primary'> Add new password</button>
   </div>
-  <app-password-item *ngFor='let item of data'></app-password-item>
+  <app-password-item *ngFor='let item of data.content' [passworditem]="item"></app-password-item>
 </div>
