--- a/src/app/password-item/password-item.component.html
+++ b/src/app/password-item/password-item.component.html
@@ -11,15 +11,14 @@
       </button>
     </div>
     <div fxLayoutGap='20px'>
-      <mat-form-field>
-        <input matInput placeholder="User Name" value="Sushi">
-      </mat-form-field>
-      <app-password-field  [copybutton]='true'></app-password-field>
+   
+      <label>User Name: {{passworditem.username}}</label>
+      <app-password-field [copybutton]='true'></app-password-field>
       <button mat-raised-button color='primary' (click)='save()'>save</button>
       <button mat-raised-button color='primary' (click)='toggleHistory()'> History
-          <mat-icon *ngIf='showHistory'>keyboard_arrow_up</mat-icon>
-          <mat-icon *ngIf='!showHistory'>keyboard_arrow_down</mat-icon>
-         </button>
+        <mat-icon *ngIf='showHistory'>keyboard_arrow_up</mat-icon>
+        <mat-icon *ngIf='!showHistory'>keyboard_arrow_down</mat-icon>
+      </button>
     </div>
 
     <div *ngIf='showHistory' style='margin-top:20px'>
@@ -27,7 +26,7 @@
       <div *ngIf='passworditem.history.length>0'>
         <div *ngFor='let item of passworditem.history'>
           <app-password-field></app-password-field>
-          <button mat-icon-button  (click)='deleteHistory(item)'>
+          <button mat-icon-button (click)='deleteHistory(item)'>
             <mat-icon>delete</mat-icon>
           </button>
         </div>
