--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -1,7 +1,9 @@
+<div style='width:100%'>
 <mat-toolbar color='primary' fxLayoutGap='20px'>
     <button mat-raised-button color='accent'> Search</button>
     <button mat-raised-button color='accent'> Add Group</button>
 </mat-toolbar>
 <div style='margin-top:20px'>
     <app-password-group *ngFor='let group of allPasswordData' [data]='group'></app-password-group>
+</div>
 </div>
