clipboard; other change

--- a/src/app/password-group/password-group.component.html
+++ b/src/app/password-group/password-group.component.html
@@ -1,7 +1,10 @@
-<div fxLayoutGap='20px'>
-  <div fxLayoutGap='20px'>
+<div fxLayoutGap='20px' style="margin:50px">
+  <mat-divider></mat-divider>
+  <h2>{{data.groupName}}</h2>
+  <div fxLayout='row' fxLayoutGap='20px'>
     <button mat-raised-button color='primary'> Search inside group</button>
     <button mat-raised-button color='primary'> Add new password</button>
   </div>
+
   <app-password-item *ngFor='let item of data.content' [passworditem]="item"></app-password-item>
 </div>
