--- a/src/app/password-item/password-item.component.html
+++ b/src/app/password-item/password-item.component.html
@@ -11,9 +11,9 @@
       </button>
     </div>
     <div fxLayoutGap='20px'>
-   
-      <label>User Name: {{passworditem.username}}</label>
-      <app-password-field [copybutton]='true'></app-password-field>
+
+      <label>{{passworditem.username||"Please Specify"}}</label>
+      <app-password-field [copybutton]='true' [password]='passworditem.currentPassword' (valueChange)='updatePassword($event)'  ></app-password-field>
       <button mat-raised-button color='primary' (click)='save()'>save</button>
       <button mat-raised-button color='primary' (click)='toggleHistory()'> History
         <mat-icon *ngIf='showHistory'>keyboard_arrow_up</mat-icon>
@@ -24,8 +24,12 @@
     <div *ngIf='showHistory' style='margin-top:20px'>
       <div *ngIf='passworditem.history.length===0'>No History</div>
       <div *ngIf='passworditem.history.length>0'>
-        <div *ngFor='let item of passworditem.history'>
-          <app-password-field></app-password-field>
+        <div *ngFor='let item of passworditem.history' fxLayout='row' fxLayoutGap='20px'>
+          <app-password-field [password]='item.password' ></app-password-field>
+          <label>From:</label> 
+          <label>{{item.startsAt | date:"MM/dd/yy" }}</label>
+          <label>To:</label>
+          <label>{{item.endsAt | date:"MM/dd/yy"}}</label>
           <button mat-icon-button (click)='deleteHistory(item)'>
             <mat-icon>delete</mat-icon>
           </button>
