update new password dialog

--- a/src/app/password-group/password-group.component.html
+++ b/src/app/password-group/password-group.component.html
@@ -3,7 +3,7 @@
   <h2>{{data.groupName}}</h2>
   <div fxLayout='row' fxLayoutGap='20px'>
     <button mat-raised-button color='primary'> Search inside group</button>
-    <button mat-raised-button color='primary'> Add new password</button>
+    <button mat-raised-button color='primary'  (click)="addNewPassword()"> Add new password</button>
   </div>
 
   <app-password-item *ngFor='let item of data.content' [passworditem]="item"></app-password-item>
