--- a/src/app/password-item/password-item.component.html
+++ b/src/app/password-item/password-item.component.html
@@ -5,7 +5,7 @@
       <h4 fxFlex='100px'>Facebook</h4>
       <p>some description</p>
       <span fxFlex='grow'></span>
-      <button mat-raised-button color='primary' style='height: 2.5em;width:10em'>Generate</button>
+      <button mat-raised-button color='primary' style='height: 2.5em;width:10em' (click)="generateNewPassword()">Generate</button>
       <button mat-button mat-icon-button>
         <mat-icon>delete</mat-icon>
       </button>
@@ -13,8 +13,8 @@
     <div fxLayoutGap='20px'>
 
       <label>{{passworditem.username||"Please Specify"}}</label>
-      <app-password-field [copybutton]='true' [password]='passworditem.currentPassword' (valueChange)='updatePassword($event)'  ></app-password-field>
-      <button mat-raised-button color='primary' (click)='save()'>save</button>
+      <app-password-field [copybutton]='true' [password]='tempPassword' (valueChange)='updatePassword($event)'  ></app-password-field>
+      <button mat-raised-button color='primary' (click)='save()'  [disabled]="saveButtonDiabled" >save</button>
       <button mat-raised-button color='primary' (click)='toggleHistory()'> History
         <mat-icon *ngIf='showHistory'>keyboard_arrow_up</mat-icon>
         <mat-icon *ngIf='!showHistory'>keyboard_arrow_down</mat-icon>
