--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -1,7 +1,7 @@
 <div style='width:100%'>
 <mat-toolbar color='primary' fxLayoutGap='20px'>
     <button mat-raised-button color='accent'>Search</button>
-    <button mat-raised-button color='accent'>Add Group</button>
+    <button mat-raised-button color='accent' (click)="openAddNewGroup()" >Add Group</button>
     <span fxFlex="grow"></span>
     <button mat-raised-button color='accent' (click)="import()" >Import</button>
     <button mat-raised-button color='accent' (click)="exportPasswords()" >Export</button>
