add form validation

--- a/src/app/add-new-password/add-new-password.component.html
+++ b/src/app/add-new-password/add-new-password.component.html
@@ -10,21 +10,21 @@
         <input type='input' matInput placeholder="URL" formControlName='targetURL'>
       </mat-form-field>
       <mat-form-field>
-        <input type='input' matInput placeholder="UserName(*)" formControlName='username'>
+        <input type='input' matInput placeholder="UserName" formControlName='username' required>
       </mat-form-field>
       <mat-form-field>
-        <input type='input' matInput placeholder="Password(*)" formControlName='password'>
+        <input type='input' matInput placeholder="Password" formControlName='password' required>
       </mat-form-field>
       <mat-form-field>
         <input type='input' matInput placeholder="Note" formControlName='note'>
       </mat-form-field>
     </div>
-  </form>
-  </div>
-  <div fxLayoutGap="20px">
+    <div fxLayoutGap="20px">
       <span fxFlex="grow"></span>
       <button mat-raised-button mat-dialog-close>Cancel</button>
-      <button mat-raised-button mat-dialog-close (click)="save()">Save</button>
+      <button type="submit" mat-raised-button mat-dialog-close  [disabled]="!newPasswordForm.valid" (click)="save()">Save</button>
     </div>
+  </form>
+  </div>
 </mat-dialog-content>
 
