--- a/src/app/password-item/password-item.component.html
+++ b/src/app/password-item/password-item.component.html
@@ -6,6 +6,7 @@
       <p>some description</p>
       <span fxFlex='grow'></span>
       <button mat-raised-button color='primary' style='height: 2.5em;width:10em' (click)="generateNewPassword()">Generate</button>
+      <button mat-raised-button color='primary' style='height: 2.5em;width:12em'>MoveGroup</button>
       <button mat-button mat-icon-button>
         <mat-icon>delete</mat-icon>
       </button>
