redux store with rxjs

--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -7,6 +7,8 @@
     <button mat-raised-button color='accent' (click)="exportPasswords()" >Export</button>
 </mat-toolbar>
 <div style='margin-top:20px'>
-    <app-password-group *ngFor='let group of allPasswordData' [data]='group'></app-password-group>
+    <app-password-group *ngFor='let group of (presentableData| async)' [data]='group'></app-password-group>
 </div>
 </div>
+
+
