--- a/src/app/add-new-password/add-new-password.component.html
+++ b/src/app/add-new-password/add-new-password.component.html
@@ -1,17 +1,22 @@
 <h2 mat-dialog-title>Add New Password</h2>
 <mat-dialog-content>
   <div style="width:600px">
-    <form [formGroup]="newPasswordForm" (ngSubmit)="save()">
+    <form [formGroup]="newPasswordForm">
     <div fxLayout='column'>
       <mat-form-field>
         <input type='input' matInput placeholder="Website or Name" formControlName='target'>
       </mat-form-field>
       <mat-form-field>
-        <input type='input' matInput placeholder="URL" formControlName='targetURL'>
+        <input type='input' matInput placeholder="URL" formControlName='targetURL'> 
       </mat-form-field>
       <mat-form-field>
-        <input type='input' matInput placeholder="UserName" formControlName='username' required>
+        <input type='input' matInput placeholder="Email" formControlName='email' required> 
       </mat-form-field>
+      <mat-form-field>
+        <input type='input' matInput placeholder="UserName" formControlName='username' required> 
+        <button matSuffix mat-button color='primary'>Same As Email</button>
+      </mat-form-field>
+ 
       <mat-form-field>
         <input type='input' matInput placeholder="Password" formControlName='password' required>
       </mat-form-field>
