--- a/src/app/password-group/password-group.component.html
+++ b/src/app/password-group/password-group.component.html
@@ -1,10 +1,14 @@
 <div fxLayoutGap='20px' style="margin:50px">
   <mat-divider></mat-divider>
-  <h2>{{data.groupName}}</h2>
-  <div fxLayout='row' fxLayoutGap='20px'>
-    <button mat-raised-button color='primary'> Search inside group</button>
-    <button mat-raised-button color='primary'  (click)="addNewPassword()"> Add new password</button>
-  </div>
+
+   <mat-toolbar>
+  <h2 fxFlex='200px'>{{data.groupName}}</h2>
+    <span fxFlex="600px"></span>
+   <!-- <button mat-raised-button color='primary'> Search inside group</button> -->
+    <button mat-raised-button color='primary'  (click)="addNewPassword()" style='height:3em'> Add new password</button>
+    <span fxFlex="50px"></span>
+  </mat-toolbar> 
+  
 
   <app-password-item *ngFor='let item of data.content' [passworditem]="item"></app-password-item>
 </div>
