--- a/src/app/password-item/password-item.component.html
+++ b/src/app/password-item/password-item.component.html
@@ -1,15 +1,16 @@
-<mat-card style='width:1000px' class='mat-elevation-z8'>
+<mat-card style='width:100%' class='mat-elevation-z8'>
   <mat-card-content>
 
     <div fxLayoutGap='20px'>
-      <h4 fxFlex='100px'>Facebook</h4>
-      <p>some description</p>
+      <h4 fxFlex='100px'>{{passworditem.target}}</h4>
+      <p>{{passworditem.targetURL}}</p>
       <span fxFlex='grow'></span>
       <button mat-raised-button color='primary' style='height: 2.5em;width:10em' (click)="generateNewPassword()">Generate</button>
       <button mat-raised-button color='primary' style='height: 2.5em;width:12em'>MoveGroup</button>
       <button mat-button mat-icon-button>
         <mat-icon>delete</mat-icon>
       </button>
+      
     </div>
     <div fxLayoutGap='20px'>
 
@@ -21,7 +22,7 @@
         <mat-icon *ngIf='!showHistory'>keyboard_arrow_down</mat-icon>
       </button>
     </div>
-
+    <p>{{passworditem.note}}</p>
     <div *ngIf='showHistory' style='margin-top:20px'>
       <div *ngIf='passworditem.history.length===0'>No History</div>
       <div *ngIf='passworditem.history.length>0'>
