--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -1,14 +1,19 @@
 <div style='width:100%'>
-<mat-toolbar color='primary' fxLayoutGap='20px'>
-    <button mat-raised-button color='accent'>Search</button>
-    <button mat-raised-button color='accent' (click)="openAddNewGroup()" >Add Group</button>
-    <span fxFlex="grow"></span>
-    <button mat-raised-button color='accent' (click)="import()" >Import</button>
-    <button mat-raised-button color='accent' (click)="exportPasswords()" >Export</button>
-</mat-toolbar>
-<div style='margin-top:20px'>
-    <app-password-group *ngFor='let group of (presentableData| async)' [data]='group'></app-password-group>
+    <mat-toolbar fxLayoutGap='20px' (click)='this.searching= false '>
+        <button *ngIf='!searching' mat-raised-button color='accent' (click)="searchClick($event)"
+            style='width:10em'>Search</button>
+        <mat-form-field *ngIf='searching'>
+            <input matInput [formControl]='searchInput' (click)='inputClick($event)'>
+        </mat-form-field>
+        <button mat-raised-button color='accent' (click)="openAddNewGroup()" style='width:10em'>Add Group</button>
+        <span fxFlex="grow"></span>
+        <button mat-raised-button color='accent' (click)="import()">Import</button>
+        <button mat-raised-button color='accent' (click)="exportPasswords()">Export</button>
+    </mat-toolbar>
+    <div fxLayoutAlign='center start' >
+        <div style='margin-top:20px;width:80%'>
+            <app-password-group *ngFor='let group of ((searching?presentableFilteredData:presentableData)| async)'
+                [data]='group'></app-password-group>
+        </div>
+    </div>
 </div>
-</div>
-
-
