--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -1,5 +1,5 @@
 <div style='width:100%'>
-    <mat-toolbar fxLayoutGap='20px' (click)='this.searching= false '>
+    <mat-toolbar class='stickyToolbar' fxLayoutGap='20px' (click)='this.searching= false '>
         <button *ngIf='!searching' mat-raised-button color='accent' (click)="searchClick($event)"
             style='width:10em'>Search</button>
         <mat-form-field *ngIf='searching'>
