--- a/src/app/password-item/password-item.component.html
+++ b/src/app/password-item/password-item.component.html
@@ -5,8 +5,7 @@
       <h4 fxFlex='100px'>{{passworditem.target}}</h4>
       <p>{{passworditem.targetURL}}</p>
       <span fxFlex='grow'></span>
-      <button mat-raised-button color='primary' style='height: 2.5em;width:10em' (click)="generateNewPassword()">Generate</button>
-      <button mat-raised-button color='primary' style='height: 2.5em;width:12em'>MoveGroup</button>
+      <button mat-raised-button style='height: 2.5em;width:15em' (click)="generateNewPassword()">Generate Random</button>
       <button mat-button mat-icon-button>
         <mat-icon>delete</mat-icon>
       </button>
@@ -16,8 +15,8 @@
 
       <label>{{passworditem.username||"Please Specify"}}</label>
       <app-password-field [copybutton]='true' [password]='tempPassword' (valueChange)='updatePassword($event)'  ></app-password-field>
-      <button mat-raised-button color='primary' (click)='save()'  [disabled]="saveButtonDiabled" >save</button>
-      <button mat-raised-button color='primary' (click)='toggleHistory()'> History
+      <button mat-raised-button  (click)='save()'  [disabled]="saveButtonDiabled" ><mat-icon>update</mat-icon>Update</button>
+      <button mat-raised-button  (click)='toggleHistory()'> History
         <mat-icon *ngIf='showHistory'>keyboard_arrow_up</mat-icon>
         <mat-icon *ngIf='!showHistory'>keyboard_arrow_down</mat-icon>
       </button>
@@ -36,7 +35,7 @@
             <mat-icon>delete</mat-icon>
           </button>
         </div>
-        <button mat-raised-button color='primary' (click)='clearHistory()'> Clear</button>
+        <button mat-raised-button color='primary' (click)='clearHistory()'><mat-icon>clear</mat-icon> Clear</button>
       </div>
     </div>
   </mat-card-content>
