--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
 <div style='width:100%'>
     <router-outlet></router-outlet>
 </div>
+
+<h1>test</h1>
+<p>{{(users | async)?.length}}</p>
