--- a/src/app/password-item/password-item.component.html
+++ b/src/app/password-item/password-item.component.html
@@ -5,29 +5,40 @@
       <h4 fxFlex='100px'>{{passworditem.target}}</h4>
       <p>{{passworditem.targetURL}}</p>
       <span fxFlex='grow'></span>
-      <button mat-raised-button style='height: 2.5em;width:15em' (click)="generateNewPassword()">Generate Random</button>
+      <button mat-raised-button style='height: 2.5em;width:15em' (click)="generateNewPassword()">Generate
+        Random</button>
       <button mat-button mat-icon-button>
         <mat-icon>delete</mat-icon>
       </button>
-      
-    </div>
-    <div fxLayoutGap='20px'>
 
-      <label>{{passworditem.username||"Please Specify"}}</label>
-      <app-password-field [copybutton]='true' [password]='tempPassword' (valueChange)='updatePassword($event)'  ></app-password-field>
-      <button mat-raised-button  (click)='save()'  [disabled]="saveButtonDiabled" ><mat-icon>update</mat-icon>Update</button>
-      <button mat-raised-button  (click)='toggleHistory()'> History
-        <mat-icon *ngIf='showHistory'>keyboard_arrow_up</mat-icon>
-        <mat-icon *ngIf='!showHistory'>keyboard_arrow_down</mat-icon>
+    </div>
+
+    <div fxLayout="row wrap" fxLayoutGap='20px'>
+
+      <label style="width: 200px;overflow:hidden">{{passworditem.username||"Please Specify"}}</label>
+      <app-password-field [copybutton]='true' [password]='tempPassword' (valueChange)='updatePassword($event)'>
+      </app-password-field>
+      <button mat-raised-button (click)='save()' [disabled]="saveButtonDiabled">
+        <mat-icon>update</mat-icon>Update
+      </button>
+      <span flex='grow'></span>
+      <button mat-raised-button (click)='toggleHistory()'> History
+        <mat-icon *ngIf='showHistory else noshowhistory '>keyboard_arrow_up</mat-icon>
+        <ng-template #noshowhistory>
+          <mat-icon>keyboard_arrow_down</mat-icon>
+        </ng-template>
       </button>
     </div>
+
+
     <p>{{passworditem.note}}</p>
+
     <div *ngIf='showHistory' style='margin-top:20px'>
-      <div *ngIf='passworditem.history.length===0'>No History</div>
-      <div *ngIf='passworditem.history.length>0'>
+
+      <div *ngIf='passworditem.history.length>0  else nohistory'>
         <div *ngFor='let item of passworditem.history' fxLayout='row' fxLayoutGap='20px'>
-          <app-password-field [password]='item.password' ></app-password-field>
-          <label>From:</label> 
+          <app-password-field [password]='item.password'></app-password-field>
+          <label>From:</label>
           <label>{{item.startsAt | date:"MM/dd/yy" }}</label>
           <label>To:</label>
           <label>{{item.endsAt | date:"MM/dd/yy"}}</label>
@@ -35,8 +46,14 @@
             <mat-icon>delete</mat-icon>
           </button>
         </div>
-        <button mat-raised-button color='primary' (click)='clearHistory()'><mat-icon>clear</mat-icon> Clear</button>
+        <button mat-raised-button color='primary' (click)='clearHistory()'>
+          <mat-icon>clear</mat-icon> Clear
+        </button>
       </div>
+      <ng-template #nohistory>
+
+        <div>No History</div>
+      </ng-template>
     </div>
   </mat-card-content>
 </mat-card>
