--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -9,6 +9,9 @@
         <span fxFlex="grow"></span>
         <button mat-raised-button color='accent' (click)="import()">Import</button>
         <button mat-raised-button color='accent' (click)="exportPasswords()">Export</button>
+        <mat-icon>account_box</mat-icon>
+        <span>{{ (user| async)?.displayName}}</span>
+        <button mat-raised-button color='accent' (click)="signout()">Sign Out</button>
     </mat-toolbar>
     <div fxLayoutAlign='center start' >
         <div style='margin-top:20px;width:80%'>
