--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -1,4 +1,4 @@
-<div style='width:100%'>
+<div style='width:100%' [hotkeys]="[['c', 'start search', testhotkey]]">
     <mat-toolbar class='stickyToolbar' fxLayoutGap='20px' (click)='this.searching= false '>
         <button *ngIf='!searching' mat-raised-button color='accent' (click)="searchClick($event)"
             style='width:10em'>Search</button>
@@ -13,10 +13,12 @@
         <span>{{ (user| async)?.displayName}}</span>
         <button mat-raised-button color='accent' (click)="signout()">Sign Out</button>
     </mat-toolbar>
-    <div fxLayoutAlign='center start' >
+    <div fxLayoutAlign='center start'>
         <div style='margin-top:20px;width:80%'>
             <app-password-group *ngFor='let group of ((searching?presentableFilteredData:presentableData)| async)'
                 [data]='group'></app-password-group>
         </div>
     </div>
 </div>
+
+<app-cheatsheet></app-cheatsheet>
