--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -1,4 +1,5 @@
-<div style='width:100%' [hotkeys]="[['c', 'start search', testhotkey]]">
+<div style='width:100%' [hotkeys]="[['c', 'start search', testhotkey]]"
+    [seqHotkeys]="[['a->d', 'a to d seq key combo',testseqhotkey]]">
     <mat-toolbar class='stickyToolbar' fxLayoutGap='20px' (click)='this.searching= false '>
         <button *ngIf='!searching' mat-raised-button color='accent' (click)="searchClick($event)"
             style='width:10em'>Search</button>
