--- a/src/app/password-manger/password-manger.component.html
+++ b/src/app/password-manger/password-manger.component.html
@@ -1,12 +1,11 @@
-<div style='width:100%' [hotkeys]="[['c', 'start search', testhotkey]]"
-    [seqHotkeys]="[['a->d', 'a to d seq key combo',testseqhotkey]]">
-    <mat-toolbar class='stickyToolbar' fxLayoutGap='20px' (click)='this.searching= false '>
-        <button *ngIf='!searching' mat-raised-button color='accent' (click)="searchClick($event)"
-            style='width:10em'>Search</button>
-        <mat-form-field *ngIf='searching'>
-            <input matInput [formControl]='searchInput' (click)='inputClick($event)'>
-        </mat-form-field>
+<div style='width:100%' [hotkeys]="[['c', 'start search', testhotkey], ['a->d', 'a to d seq key combo',testseqhotkey]]">
+    <mat-toolbar   [hotkeys]= "['/','search', handleStartSearch  ]" class='stickyToolbar' fxLayoutGap='20px' (click)='this.searching= false '>
+      
         <button mat-raised-button color='accent' (click)="openAddNewGroup()" style='width:10em'>Add Group</button>
+        <span fxFlex="grow"></span>
+        <button mat-button (click)="startSearch()" ><mat-icon>search</mat-icon></button> 
+        <input matInput #searchAll [formControl]="searchInput" (click)='inputClick($event)'>
+
         <span fxFlex="grow"></span>
         <button mat-raised-button color='accent' (click)="import()">Import</button>
         <button mat-raised-button color='accent' (click)="exportPasswords()">Export</button>
@@ -22,4 +21,3 @@
     </div>
 </div>
 
-<app-cheatsheet></app-cheatsheet>
